--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.org.springframework.jdbc.core=DEBUG
 
 spring.datasource.url=jdbc:postgresql://${azureDatabaseName}.postgres.database.azure.com:5432/demo
-spring.datasource.username=java@${azureDatabaseName}
+spring.datasource.username=${azureDatabaseUsername}@${azureDatabaseName}
 spring.datasource.password=${azureDatabasePassword}
 
 spring.sql.init.mode=always
